--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./scripts/serve.js",
-    "build": "node ./scripts/build.js",
+    "start": "node ./tasks/serve.js",
+    "build": "node ./tasks/build.js",
+    "dist": "env NODE_ENV=production node ./tasks/build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -35,18 +36,33 @@
     "babel-plugin-stylus-compiler": "^1.4.0",
     "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
     "babelify": "^10.0.0",
+    "body-parser": "^1.19.0",
     "browserify": "^16.2.3",
     "browserify-cache-api": "^3.0.1",
     "browserify-hmr": "^0.4.0",
+    "compression": "^1.7.4",
+    "config-node": "^1.3.0",
+    "cors": "^2.8.5",
     "envify": "^4.1.0",
     "errorify": "^0.3.1",
+    "eslint": "^5.15.3",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-only-warn": "^1.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "express": "^4.17.1",
     "flush-write-stream": "^2.0.0",
     "fs-extra": "^8.1.0",
     "get-port": "^5.1.1",
     "minify-stream": "^1.2.1",
+    "moment": "^2.24.0",
     "pathmodify": "^0.5.0",
     "pugify": "^2.2.0",
+    "response-time": "^2.3.2",
+    "serve-favicon": "^2.5.0",
     "uglifyify": "^5.0.2",
     "watchify": "^3.11.1"
   },
