--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./tasks/serve.js",
     "build": "node ./tasks/build.js",
-    "serve": "env NODE_ENV=production pm2 start ./server"
+    "serve": "env NODE_ENV=production node ./tasks/build.js && pm2 start ecosystem.config.js"
   },
   "author": "",
   "license": "ISC",
