--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "audioviz",
+  "name": "frequencies",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node ./tasks/serve.js",
-    "build": "node ./tasks/build.js",
-    "serve": "env NODE_ENV=production node ./tasks/build.js && pm2 start ecosystem.config.js"
+    "build": "env NODE_ENV=production node ./tasks/build",
+    "serve": "pm2 start ecosystem.config.js --env production"
   },
   "author": "",
   "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint -c ./.eslintrc"
+    ]
+  },
+  "browserslist": [
+    "> 5%"
+  ],
   "browserify": {
     "transform": [
-      "pugify",
+      [
+        "fn-pug/lib/transform/browserify"
+      ],
+      "stylify",
       [
         "babelify",
         {
@@ -24,20 +40,26 @@
       ]
     ]
   },
+  "dependencies": {
+    "@scoutgg/widgets": "^2.2.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "virtual-dom": "^2.1.1"
+  },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.8.6",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-function-bind": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/plugin-transform-async-to-generator": "^7.1.0",
-    "@babel/preset-env": "7.1.0",
-    "babel-plugin-stylus-compiler": "^1.4.0",
-    "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
+    "@babel/preset-env": "^7.8.6",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-class-name": "github:zeddidragon/babel-plugin-class-name",
     "babelify": "^10.0.0",
     "body-parser": "^1.19.0",
     "browserify": "^16.2.3",
-    "browserify-cache-api": "^3.0.1",
     "browserify-hmr": "^0.4.0",
     "compression": "^1.7.4",
     "config-node": "^1.3.0",
@@ -45,27 +67,31 @@
     "envify": "^4.1.0",
     "errorify": "^0.3.1",
     "eslint": "^5.15.3",
-    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard": "^14.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-only-warn": "^1.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-only-warn": "^1.0.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-pug": "^1.2.2",
+    "eslint-plugin-standard": "^4.0.1",
     "express": "^4.17.1",
     "flush-write-stream": "^2.0.0",
+    "fn-pug": "github:scoutgg/fn-pug",
     "fs-extra": "^8.1.0",
     "get-port": "^5.1.1",
+    "husky": "^4.2.3",
+    "isomorphic-fetch": "^2.2.1",
+    "lint-staged": "^10.0.8",
     "minify-stream": "^1.2.1",
-    "moment": "^2.24.0",
     "pathmodify": "^0.5.0",
-    "pugify": "^2.2.0",
+    "pug": "^2.0.4",
     "response-time": "^2.3.2",
     "serve-favicon": "^2.5.0",
+    "stylify": "^1.4.0",
+    "stylus": "^0.54.7",
+    "through2": "^3.0.1",
     "uglifyify": "^5.0.2",
     "watchify": "^3.11.1"
-  },
-  "dependencies": {
-    "lodash": "^4.17.15"
   }
 }
